<resources>
    <string name="app_name">AUT2_03</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Travel Planner</string>
    <string name="nav_header_subtitle">AUT2_03</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_act1">Database</string>
    <string name="menu_act2">List</string>
    <string name="menu_act3">Recorder</string>
    <string name="menu_act4">Connections</string>

    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_modify">Modify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>