<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/activity1"
            android:icon="@drawable/database"
            android:title="@string/menu_act1" />

        <item
            android:id="@+id/activity2"
            android:icon="@drawable/list"
            android:title="@string/menu_act2" />

        <item
            android:id="@+id/activity3"
            android:icon="@drawable/microphone"
            android:title="@string/menu_act3" />

        <item
            android:id="@+id/activity4"
            android:icon="@drawable/link"
            android:title="@string/menu_act4" />
    </group>
</menu>